<resources>
    <string name="app_name">我的電視·〇</string>
    <string name="title_channel_reversal">Channel Reversal</string>
    <string name="title_channel_num">Show Channel Number When Switching</string>
    <string name="check_version">Check for Updates</string>
    <string name="title_boot_startup">Boot Startup</string>
    <string name="appreciate">Appreciate Author</string>
    <string name="channels">Change Source</string>
    <string name="channel">Default Channel</string>
    <string name="title_repeat_info">Show Video Info During Loop Playback</string>
    <string name="title_time">Show Time</string>
    <string name="title_config_auto_load">Update Video Source on App Startup</string>
    <string name="exit">Exit Application</string>
    <string name="default_channel">Default Channel Number</string>
    <string name="clear">Restore Default</string>
    <string name="server">Remote Configuration</string>
    <string name="title_default_like">Enter My Favorites on App Startup</string>
    <string name="proxy">Network Proxy</string>
    <string name="epg_status_err">EPG status error</string>
    <string name="epg_request_err">EPG request error</string>
    <string name="channel_import_success">Channel import successful</string>
    <string name="channel_import_error">Channel import error</string>
    <string name="channel_status_error">Channel status error</string>
    <string name="channel_format_error">Channel format error</string>
    <string name="channel_read_error">Unable to read channel</string>
    <string name="channel_request_error">Channel request error</string>
    <string name="play_error">Play error</string>
    <string name="file_not_exist">File does not exist</string>
    <string name="channel_not_exist">Channel does not exist</string>
    <string name="config_restored">Configuration restored to default</string>
    <string name="invalid_config_address">Invalid configuration address</string>
    <string name="authorization_failed">Authorization failed</string>
    <string name="play_default_channel">Play default channel</string>
    <string name="play_last_channel">Play last channel</string>
    <string name="default_channel_out_of_range">Default channel out of range, automatically set to 0</string>
    <string name="last_channel_out_of_range">Last channel out of range, automatically set to 0</string>
    <string name="favorite_mode">Favorite Mode</string>
    <string name="standard_mode">Standard Mode</string>
    <string name="press_again_to_exit">Press again to exit</string>
    <string name="show_all_channels">Show all channels</string>
    <string name="default_channel_set_success">Default channel set successfully</string>
    <string name="default_channel_set_failure">Failed to set default channel</string>
    <string name="default_proxy_set_success">Proxy set successfully</string>
    <string name="default_proxy_set_failure">Failed to set proxy</string>
    <string name="default_epg_set_success">EPG set successfully</string>
    <string name="default_epg_set_failure">Failed to set EPG</string>
    <string name="default_ua_set_success">User Agent set successfully</string>
    <string name="default_ua_set_failure">Failed to set User Agent</string>
    <string name="start_config_channel">Start import channel</string>
    <string name="start_set_default_channel">Start setting default channel</string>
    <string name="my_favorites">My Favorites</string>
    <string name="all_channels">All Channels</string>
    <string name="compact_menu">Compact Menu</string>
    <string name="display_seconds">Display Seconds</string>
    <string name="no_video_source">No Video Source</string>
    <string name="soft_decode">Soft Decode</string>
    <string name="epg_is_empty">EPG is empty</string>
    <string name="play_settings">Playback Settings</string>
    <string name="ui_settings">UI Settings</string>
    <string name="system_settings">System Settings</string>
    <string name="about">About</string>
    <string name="ui_alpha">UI Transparency</string>
</resources>